--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-site: Personal Jekyll Theme
+site: Thatcher Imaging
 
-url: 
-baseurl: 
+url: https://thatcherfreeman.com
+baseurl:
 
 collections:
   pages:
@@ -44,7 +44,7 @@ markdown: kramdown
 kramdown:
   input: GFM
   syntax_highlighter: rouge
-  
+
 sass:
   style: compressed
 
@@ -52,6 +52,5 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
 
-paginate: 6
+paginate: 8
 paginate_path: "/blog/page:num/"
-  
