--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,6 +16,8 @@ menu_settings:
       url: '/tutorials/'
     - title: 'Blog'
       url: '/blog/'
+    - title: 'Search'
+      url: '/search'
     - title: 'About'
       url: '/about'
     - title: 'Contact'
@@ -156,7 +158,7 @@ font_settings:
     letter_spacing: 0
 
 advanced_settings:
-  ajax_loading: true
+  ajax_loading: false
   analytics_code: ""
   custom_styles: ""
   header_js: ""
